# devi-chess-engine

./: .gitignore  Cargo.toml  LICENSE  README.md  baseline_output.txt  perft_depth8_results.txt  project_brief.html  results.csv
.github/workflows/: ci.yml
benchmarks/: baseline.csv  hetero_10t_efficient.csv  hetero_10t_fast.csv  hetero_10t_mixed.csv  hetero_10t_none.csv  hetero_8t_efficient.csv  hetero_8t_fast.csv  hetero_8t_mixed.csv  hetero_8t_none.csv  policy_mixed_75.txt  policy_none.txt  speedup.csv  speedup_none.csv
benchmarks/scaling_analysis/: metadata_20251102_195842.txt  speedup_d4.csv  speedup_d7.csv
benchmarks/v0.5.0/: two_phase_benchmark.csv
crashes/: crash_1756007018086.json  crash_1756007018092.json  crash_1756078610383.json  crash_1756078610386.json  crash_1756078744104.json  crash_1756078921393.json  crash_1756078921413.json  crash_1756078921415.json  crash_1762270304018.json  crash_1762270304453.json  crash_1762270304915.json  crash_1762270305487.json
docs/: fault_analysis.json  project_brief.md  soak_raw.txt  soak_summary.txt
examples/: detailed_perft.rs  test_scheduling.rs
releases/: README.md
releases/v0.2.2-parallel/: speedup.csv
scripts/: analyze_hetero.py  analyze_two_phase.py  benchmark_two_phase.sh  compare_policies_plot.py  generate_speedup_plot.py  heterogeneous.sh  plot_hetero.py  reproduce_results.sh  run_fault.sh  soak.sh  test_recovery_stress.sh  threads.sh  two_phase.sh
src/: cli.rs  lib.rs  main.rs  types.rs
src/board/: mod.rs  (+2 more)
tests/: board_tests.rs  ci_gate.rs  movegen_tests.rs  perft_tests.rs  recovery_tests.rs
(+67 files in other folders)
