[package]
name = "devi"
version = "0.3.0"
edition = "2021"
authors = ["Siddhant Shettiwar <sid4mndev@gmail.com>"]
keywords = ["chess", "engine", "parallel", "search"]

[dependencies]
rand = "0.8"
once_cell = "1.19"
clap = { version = "4.0", features = ["derive"]}
rayon = "1.10.0" 
libc = "0.2"
# clap = "4.0"

[profile.dev]
overflow-checks = true
