[package]
name = "devi"
version = "0.5.0"
edition = "2021"
authors = ["Siddhant Shettiwar <sid4mndev@gmail.com>"]
keywords = ["chess", "engine", "parallel", "search"]

[dependencies]
rand = "0.8"
once_cell = "1.19"
clap = { version = "4.0", features = ["derive"]}
rayon = "1.10.0" 
libc = "0.2"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-big-array = "0.5"

[profile.dev]
overflow-checks = true
